syntax = "proto3";

package auth;

option go_package = "./auth";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string name = 1;
  string email = 2;
}

service Auth {
  rpc ValidateToken(google.protobuf.Empty) returns (ValidateTokenResponse){
    option (google.api.http) = {
      post: "/validate-token"
      body: "*"
      };
  }
}